# ckanext-data-requests

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/data_requests/: blueprint.py  plugin.py  views.py
ckanext/data_requests/assets/: script.js  webassets.yml
ckanext/data_requests/templates/: header.html
ckanext/data_requests/templates/data_requests/: admin.html  create.html  detail.html  index.html
ckanext/data_requests/tests/: test_plugin.py
ckanext_data_requests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
