[options]
packages = find:
namespace_packages = ckanext
install_requires =
    psycopg2-binary
include_package_data = True

[options.entry_points]
ckan.plugins =
    data_requests = ckanext.data_requests.plugin:DataRequestsPlugin

babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/data_requests/i18n/ckanext-data_requests.pot
width = 80

[init_catalog]
domain = ckanext-data_requests
input_file = ckanext/data_requests/i18n/ckanext-data_requests.pot
output_dir = ckanext/data_requests/i18n

[update_catalog]
domain = ckanext-data_requests
input_file = ckanext/data_requests/i18n/ckanext-data_requests.pot
output_dir = ckanext/data_requests/i18n
previous = true

[compile_catalog]
domain = ckanext-data_requests
directory = ckanext/data_requests/i18n
statistics = true